		from displaying at the same time.
	Added BubbleChartGenerator and BubbleChartSeriesAttributes.
	Deleted SeriesAttributes.getRenderer() and changed SeriesAttributes.getPlot()
		to return a Plot, not an XYPlot
	Added BoxPlots
	Display2D has an option for precise drawing
	Console can save the positions of all the displays as user preferences.  Still
		a bit flickery though.
	PropertyField no longer attempts to set the underlying value of sliding properties
		when initialized.
        Various classes now load classes dynamically using Class.forName(..., , true, 
		Thread.currentThread.getContextClassLoader()) rather than just 
		Class.forName(...) as is normally done.  This solves an obscure and rare 
		bug where, if you place the mason.jar file in the Extension Classes 
		location on your computer (such as /Library/Java/Extension/ on a Mac) 
		rather than in the CLASSPATH, the ParameterDatabase cannot load
                classes normally found in the CLASSPATH because it has been
                assigned a different ClassLoader than they have.  Java's
                class loading model is bizarre and arcane.
	MASON handles missing JFreeCharts with aplomb now, rather than making blank
		menu names	
	Added a warning in Display2D.step() about a potential bug triggered in Linux
		Java 6 in an unusual circumstance.  We've decided NOT to add our
		workaround as it will likely slow down drawing: it's not a bug in
		our code but rather in Oracle's.  But we included explanation about
		how to work around it in the comments to that method.
	Various preferences keys made public in Console
	The Console is now refreshed when a selection is made in Display[2|3]D
	If the simulation.classes file has a single entry, then it is directly
		launched rather than popping up the simulation chooser window when
		the user runs java sim.display.Console or when New Simulation...
		is chosen.
	Fix in the manual examples regarding jobs.  Thanks to Stewart Aitken 
		<sa120@york.ac.uk>