@@ -7,7 +7,7 @@
 
 JAVAC = javac ${FLAGS}
 
-FLAGS = -target 1.6 -source 1.6 -g -nowarn -Xlint:deprecation
+FLAGS = -target 1.5 -source 1.5 -g -nowarn 
 
 VERSION = 17
 
